# WebGPU

./: .gitignore  GPU.sln  Generator.fsx  Native.c  README.md  bla.h  buildnative.cmd  buildnative.sh  dawn.commit  dawn.json  paket.dependencies  pulldawn.cmd  pulldawn.sh
.config/: dotnet-tools.json
.github/workflows/: native.yml
include/: webgpu.h
include/dawn/: webgpu.h  webgpu_cpp.h  webgpu_cpp_print.h  webgpu_glfw.h
include/dawn/dawn/: webgpu.h  webgpu_cpp.h  webgpu_cpp_print.h
include/dawn/dawn/wire/client/: webgpu_cpp.h
include/dawn/webgpu/: webgpu.h
include/dawn/wire/client/: webgpu_cpp.h
include/webgpu/: webgpu.h
libs/Native/WebGPU/mac/AMD64/: libWebGPUNative.dylib
libs/Native/WebGPU/mac/ARM64/: dawn.commit  libWebGPU.dylib  libWebGPUNative.dylib
libs/Native/WebGPU/windows/AMD64/: WebGPUNative.lib  dawn.commit  webgpu_dawn.lib
src/Aardvark.Application.Slim.WebGPU/: Aardvark.Application.Slim.WebGPU.fsproj  Application.fs  Instance.fs  Library.fs  WebGPUApplication.fs  paket.references
src/Aardvark.Rendering.WebGPU/: Aardvark.Rendering.WebGPU.fsproj  ComputeShader.fs  PreparedRenderObject.fs  RenderTask.fs  ResourceManager.fs  Runtime.fs  Scan.fs  Translations.fs  UniformWriters.fs  paket.references
src/Aardvark.Rendering.WebGPU/Resources/: Buffer.fs  Framebuffer.fs  FramebufferSignature.fs  PipelineLayout.fs  Sampler.fs  Shader.fs  Texture.fs
src/Demo/: BasicRasterizer.fs  BinRasterizer.fs  ComputeRasterizerDemo.fs  DefaultRasterizer.fs  Demo.fsproj  Program.fs  Rasterizer.fs  RenderDemo.fs  paket.references
src/FShade.WGSL/: Assembler.fs  Extensions.fs  FShade.WGSL.fsproj  IntrinsicFunctions.fs  IntrinsicParameters.fs  UniformBufferLayout.fs  Utilities.fs  paket.references
src/GPU/: Adapter.fs  Buffer.fs  CommandBuffer.fs  Descriptors.fs  Device.fs  Enums.fs  Frontend.fs  FrontendExtensions.fs  GPU.fsproj  Generator.fsx  Native.c  Pinnable.fs  Program.fs  Queue.fs  Texture.fs  WebGPU.c  WebGPURaw.fs  Wrapper.fs  dawn.json  lib_wgpu.h  lib_wgpu.js  library_webgpu_enum_tables.js  library_webgpu_generated_sig_info.js  library_webgpu_generated_struct_info.js  paket.references  webgpu.cpp
src/GPU/wwwroot/: index.html
src/Test/: Program.fs  paket.references
src/WebGPU/: BufferExtensions.fs  BufferFillExtensions.fs  Enums.fs  Frontend.fs  FrontendExtensions.fs  Pinnable.fs  ShaderTrans.fs  TextureExtensions.fs  WebGPU.c  WebGPU.cpp  WebGPU.fsproj  Wrapper.fs  paket.references
src/WebGPUNative/: CMakeLists.txt  ShaderTrans.cpp  WebGPU.cpp  dllexport.h  test.cmd  utils_metal.mm
